# modelVS3

./: AGENT_DESIGNER_GUIDE.md  AGENT_DESIGNER_UPDATE.md  DEPLOYMENT_SUCCESS_REPORT.md  DEPLOYMENT_VERIFICATION.md  DUAL_ENVIRONMENT_GUIDE.md  Dockerfile  FINAL_DEPLOYMENT_CONFIRMATION.md  LICENSE  PORT_CHANGE_SUMMARY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  QIMEN_TOOL_FIX_REPORT.md  README.md  REMOTE_DEPLOYMENT_QUICK_START.md  SCRIPTS_UPDATE_REPORT.md  SERVICE_ROUTING_ANALYSIS.md  TECH_DEBT_FIXES.md  TOOLS_REGISTRATION_GUIDE.md  alembic.ini  cli.py  deploy_guide.md  docker-compose.dev.yml  docker-compose.production.yml  docker-compose.yml  env-template.txt  init.sql  nginx-ssl-config.conf  pyproject.toml  quick-fix-public-ip.sh  quick_deploy.sh  register_tools.sh  register_tools_simple.sql  requirements.txt  restart_dev.sh  secure-deployment-guide.md  start_agent_designer.sh  test_agent_designer.md  verify_agent_designer.sh
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_remove_pricing.py  003_update_agent_schema.py  004_add_advanced_agent_tables.py  005_add_chat_history_tables.py  006_add_tool_calls_to_chat_messages.py  3c63e77f6c23_add_api_key_and_custom_headers_to_.py
config/: dev.env  env.template  production.env
examples/: test_local_models.py  usage_examples.py
examples/agents/: content_creator.yaml  customer_service.yaml  financial_analyst.yaml
examples/tools/: weather_api.json
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
frontend/src/components/: AuthenticatedLayout.tsx  ErrorBoundary.tsx  Layout.tsx  LazyImage.tsx  MessageBubble.tsx  MobileAgentChat.tsx  ToolCallDisplay.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useApi.ts  useChat.ts  useDebounce.ts  useLocalStorage.ts
monitoring/: prometheus.yml
qimenEngine/: __init__.py  astronomical.py  cache.py  config.py  ganzhi.py  ju.py  palace.py  qimen_calendar.py  qimen_only.py  rules.py  symbols.py  validation.py  zhishi_calculator.py
scripts/: check_models.py  check_models_fixed.py  deploy_production.sh  dev_setup.sh  manage_environments.sh  quick_register_time_tool.py  quick_register_tools.sh  register_all_tools.py  register_all_tools_docker.py  register_calendar_tool.py  seed_advanced_tools.py  seed_data.py  start.sh  start_dev.sh  test_agent_debug.py  test_agent_tools.py  test_deepseek.py  test_dev_kimi_agent.py  test_frontend_kimi_agent.py  test_hello_kimi.py  test_kimi_agent.py  test_qimen_agent.py  update_tools_database.py  verify_deployment.sh
src/: __init__.py  config.py  database.py  main.py  middleware.py  models.py  models_advanced.py  schemas.py  schemas_advanced.py
src/core/: __init__.py  advanced_agent_executor.py  advanced_memory_manager.py  advanced_tool_executor.py  agent_executor.py  llm_adapters.py  memory.py  multi_model_executor.py  tool_executor.py
src/routers/: __init__.py  advanced_agents.py  agents.py  auth.py  chat.py  chat_history.py  chat_sessions.py  chat_test.py  dashboard.py  models.py  runs.py  tools.py
src/utils/: api_client.py
tests/: test_api.py
(+20 files in other folders)
